--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,11 @@
             <artifactId>easymock</artifactId>
             <version>3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>cobertura</groupId>
+            <artifactId>cobertura</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -207,8 +211,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
