--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,56 @@
         <logback.version>1.0.11</logback.version>
         <slf4j.version>1.7.5</slf4j.version>
     </properties>
+    <profiles>
+
+    <profile>
+        <id>strict</id>
+        <activation>
+            <property>
+                <name>skipCobertura</name>
+                <value>false</value>
+            </property>
+        </activation>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+                        <instrumentation>
+                        </instrumentation>
+                        <check>
+                            <!--<branchRate>100</branchRate>-->
+                            <!--<lineRate>100</lineRate>-->
+                            <!--<haltOnFailure>true</haltOnFailure>-->
+                            <!--<totalBranchRate>91</totalBranchRate>-->
+                            <!--<totalLineRate>96</totalLineRate>-->
+                            <!--<packageLineRate>92</packageLineRate>-->
+                            <!--<packageBranchRate>88</packageBranchRate>-->
+                            <regexes>
+                                <regex>
+                                    <pattern>com.springapp.mvc.controllers.*</pattern>
+                                    <branchRate>90</branchRate>
+                                    <lineRate>95</lineRate>
+                                </regex>
+
+                            </regexes>
+                        </check>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>clean</goal>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+ </profiles>
 
     <dependencies>
         <dependency>
@@ -223,4 +273,13 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.1</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
